--- a/loja/pom.xml
+++ b/loja/pom.xml
@@ -15,4 +15,11 @@
 		</dependency>
 	</dependencies>
 	
+	<repositories>
+        <repository>
+            <id>spring-repo</id>
+            <url>https://repo.spring.io/release</url>
+        </repository>
+    </repositories>
+	
 </project>
